--- a/listas.html
+++ b/listas.html
@@ -71,7 +71,7 @@
                     <h2 class="text-center">LISTAS</h2>
                     <h3>Listas desordenadas</h3>
                     <ul>
-                        <li>Elemento 1</li>
+                        <li>Elementodad 1</li>
                         <li>Elemento 2</li>
                         <li>Elemento 3</li>
                         <li>Elemento 4</li>
