--- a/enlaces.html
+++ b/enlaces.html
@@ -12,7 +12,7 @@
     <div class="container shadow">
         <header>
             <div class="row align-items-center">
-                <div class="col-3"><img src="img/atleti" alt="logo" width="250"></div>
+                <div class="col-3"><img src="" alt="logo" width="250"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
@@ -61,10 +61,10 @@
         </header>
         <main class="shadow">
             <div class="px-3">
-                <h1 class="text-center bg-azul-o text-white py-3">HTML5 & CSS3</h1>
+                <h1 class="text-center bg-azul-o text-yellow py-3">HTML5 & CSS3</h1>
             </div>
             <div class="px-3">
-                <hr>
+                <hr class="custom-hr">
             </div>
             <div class="p-3">
                 <div id="enlaces" class="py-3">
