--- a/listas.html
+++ b/listas.html
@@ -61,17 +61,17 @@
         </header>
         <main class="shadow">
             <div class="px-3">
-                <h1 class="text-center bg-azul-o text-white py-3">HTML5 & CSS3</h1>
+                <h1 class="text-center bg-azul-o text-yellow py-3">HTML5 & CSS3</h1>
             </div>
             <div class="px-3">
-                <hr>
+                <hr class="custom-hr">
             </div>
             <div class="p-3">
                 <div id="home" class="py-3">
                     <h2 class="text-center">LISTAS</h2>
                     <h3>Listas desordenadas</h3>
                     <ul>
-                        <li>Elementodad 1</li>
+                        <li>Elemento</li>
                         <li>Elemento 2</li>
                         <li>Elemento 3</li>
                         <li>Elemento 4</li>
@@ -205,7 +205,7 @@
 
         </main>
         <footer>
-            <h1 class="bg-azul-o text-center text-white py-3">&copy; Jorge Muñoz</h1>
+            <h1 class="bg-azul-o text-center text-yellow py-3">&copy; Jorge Muñoz</h1>
         </footer>
     </div>
     <script>
