--- a/parrafos.html
+++ b/parrafos.html
@@ -61,10 +61,10 @@
         </header>
         <main class="shadow">
             <div class="px-3">
-                <h1 class="text-center bg-azul-o text-white py-3">HTML5 & CSS3</h1>
+                <h1 class="text-center bg-azul-o text-yellow py-3">HTML5 & CSS3</h1>
             </div>
             <div class="px-3">
-                <hr>
+                <hr class="custom-hr">
             </div>
             <div class="p-3">
                 <div id="parrafos" class="py-3">
@@ -109,7 +109,7 @@
 
         </main>
         <footer>
-            <h1 class="bg-azul-o text-center text-white py-3">&copy; Jorge Muñoz</h1>
+            <h1 class="bg-azul-o text-center text-yellow py-3">&copy; Jorge Muñoz</h1>
         </footer>
     </div>
     <script>
