--- a/formularios.html
+++ b/formularios.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container shadow">
         <header>
-            <div class="row align-it                             <div class="col-3"><img src="img/españa2.png" alt="logo" width="250"></div>
+            <div class="row align-items-center">                
+             <div class="col-3"><img src="img/españa2.png" alt="logo" width="250"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
@@ -60,10 +61,10 @@
         </header>
         <main class="shadow">
             <div class="px-3">
-                <h1 class="text-center bg-azul-o text-white py-3">HTML5 & CSS3</h1>
+                <h1 class="text-center bg-azul-o text-yellow py-3">HTML5 & CSS3</h1>
             </div>
             <div class="px-3">
-                <hr>
+                <hr class="custom-hr">
             </div>
             <div class="p-3">
                 <div id="formularios" class="py-3">
@@ -166,7 +167,7 @@
             </div>
         </main>
         <footer>
-            <h1 class="bg-azul-o text-center text-white py-3">&copy; Jorge Muñoz</h1>
+            <h1 class="bg-azul-o text-center text-yellow py-3">&copy; Jorge Muñoz</h1>
       </div>
             </div>
 
