--- a/tablas.html
+++ b/tablas.html
@@ -61,10 +61,10 @@
         </header>
         <main class="shadow">
             <div class="px-3">
-                <h1 class="text-center bg-azul-o text-white py-3">HTML5 & CSS3</h1>
+                <h1 class="text-center bg-azul-o text-yellow py-3">HTML5 & CSS3</h1>
             </div>
             <div class="px-3">
-                <hr>
+                <hr class="custom-hr">
             </div>
             <div class="p-3">
                 <div id="tablas" class="py-3">
@@ -297,7 +297,8 @@
     </div>
     </div>
 
-    </main <footer>
+    </main>
+     <footer>
     <h1 class="bg-azul-o text-center text-white py-3">&copy; Jorge Muñoz</h1>
     </footer>
     </div>
