--- a/parrafos.html
+++ b/parrafos.html
@@ -19,7 +19,7 @@
                         <ul class="text-right">
                             <li>
                                 <a href="index.html">
-                                    Home
+                                    Homer
                                 </a>
                             </li>
                             <li>
