--- a/formularios.html
+++ b/formularios.html
@@ -19,7 +19,7 @@
                         <ul class="text-right">
                             <li>
                                 <a href="index.html">
-                                    Homer
+                                    Home
                                 </a>
                             </li>
                             <li>
