--- a/listas.html
+++ b/listas.html
@@ -12,14 +12,14 @@
     <div class="container shadow">
         <header>
             <div class="row align-items-center">
-                <div class="col-3"><img src="img/logoiesfseif.png" alt="logo" width="250"></div>
+                <div class="col-3"><img src="img/logoespaña.png" alt="logo" width="100"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
                         <ul class="text-right">
                             <li>
                                 <a href="index.html">
-                                    Homer
+                                    Home
                                 </a>
                             </li>
                             <li>
