--- a/multimedia.html
+++ b/multimedia.html
@@ -68,7 +68,7 @@
             </div>
             <div class="p-3">
                 <div id="multimedia" class="py-3">
-                    <h2 class="text-center">MULTIMEDIAa</h2>
+                    <h2 class="text-center">MULTIMEDIA</h2>
                     <h2>Galería</h2>
                     <div class="col3">
                         <img src="img/foto1.jpg" alt="" width="100%">
