--- a/formularios.html
+++ b/formularios.html
@@ -12,7 +12,7 @@
     <div class="container shadow">
         <header>
             <div class="row align-items-center">                
-             <div class="col-3"><img src="img/españa2.png" alt="logo" width="250"></div>
+             <div class="col-3"><img src="img/logoespaña.png" alt="logo" width="100"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
@@ -85,7 +85,7 @@
                             </p>
                         </fieldset>
                     </form>
-                    <h2 class="text-center  ">Formulario de registro</h2>
+                    <h2 class="text-center  "></h2>
                     <form action="#" method="get" class="formregister">
                         <fieldset>
                             <legend>Registro</legend>
