--- a/multimedia.html
+++ b/multimedia.html
@@ -12,7 +12,7 @@
     <div class="container shadow">
         <header>
             <div class="row align-items-center">
-                <div class="col-3"><img src="img/españa2.png" alt="logo" width="250"></div>
+                <div class="col-3"><img src="img/logoespaña.png" alt="logo" width="100"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
@@ -78,10 +78,10 @@
                     </div>
                   
                     <div class="col3">
-                        <img src="img/foto3.jpg" alt="" width="100%">
+                        <img src="img/foto9.jpg" alt="" width="100%">
                     </div>
                     <div class="col3">
-                        <img src="img/foto4.jpg" alt="" width="100%">
+                        <img src="img/foto7.jpg" alt="" width="100%">
                     </div>
                     <div class="col3">
                         <img src="img/foto5.jpg" alt="" width="100%">
@@ -93,9 +93,9 @@
                     </div>
                     <div class="cb"></div>
                     <div class="text-center"><h3>Video</h3></div>
-                    <video src="img/video.mp4" controls autoplay></video>
+                    <video src="img/videeo.mp4" controls autoplay></video>
                     <div class="text-center"><h3>Audio</h3></div>
-                    <audio src="img/audiomult.mp3" controls></audio>
+                    <audio src="img/Grabación.m4a" controls></audio>
             </div>
 
         </main>
