--- a/tablas.html
+++ b/tablas.html
@@ -12,7 +12,7 @@
     <div class="container shadow">
         <header>
             <div class="row align-items-center">
-                <div class="col-3"><img src="img/logoiesfseif.png" alt="logo" width="250"></div>
+                <div class="col-3"><img src="img/logoespaña.png" alt="logo" width="100"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
@@ -186,6 +186,40 @@
                             <td>kk</td>
                         </tr>
                     </table>
+                    <h3>Tabla con combinacion de filas y columnas</h3>
+                    <table class="tcfc" border="1">
+                        <tr>
+                            <td rowspan="3">Texto</td>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                        </tr>
+                        <tr>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                        </tr>
+                        <tr>                           
+                            <td>Texto</td>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                        </tr>
+                        <tr>
+                            <th colspan="4">Texto largo</th>
+                        </tr>
+                        <tr>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                        </tr>
+                        <tr>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                            <td>Texto</td>
+                        </tr>
+                    </table>
                     <h3>Tabla con diseño diferente en filas pares e impares</h3>
                     <table border="1" class="striped">
                         <tr>
@@ -229,7 +263,7 @@
 
                     <table border="1" class="horario">
                         <tr>
-                            <th colspan="6" class="grupo">S1DAM</th>
+                            <th  class="grupo" colspan="6">S1DAM</th>
                         </tr>
                         <tr>
                             <th>/ &#0126; \</th>
@@ -299,7 +333,7 @@
 
     </main>
      <footer>
-    <h1 class="bg-azul-o text-center text-white py-3">&copy; Jorge Muñoz</h1>
+    <h1 class="bg-azul-o text-center text-yellow py-3">&copy; Jorge Muñoz</h1>
     </footer>
     </div>
     <script>
