--- a/multimedia.html
+++ b/multimedia.html
@@ -100,7 +100,7 @@
 
         </main>
         <footer>
-            <h1 class="bg-azul-o text-center text-white py-3">&copy; Jorge Muñoz </h1>
+            <h1 class="bg-azul-o text-center text-yellow py-3">&copy; Jorge Muñoz </h1>
         </footer>
     </div>
     <script>
