--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container shadow">
         <header>
             <div class="row align-items-center">
-                <div class="col-3"><img src="/img/logoespaña.png" alt="logo" width="100"></div>
+                <div class="col-3"><img src="img/logoespaña.png" alt="logo" width="100"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
