--- a/parrafos.html
+++ b/parrafos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="formularios">
     <div class="container shadow">
         <header>
             <div class="row align-items-center">
