--- a/formularios.html
+++ b/formularios.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+
+
+    <body class="formularios-rojos">
     <div class="container shadow">
         <header>
+            
             <div class="row align-items-center">                
              <div class="col-3"><img src="img/logoespaña.png" alt="logo" width="100"></div>
                 <div class="col-9">
@@ -18,6 +21,7 @@
                     <nav id="menu">
                         <ul class="text-right">
                             <li>
+                                
                                 <a href="index.html">
                                     Home
                                 </a>
@@ -142,7 +146,7 @@
                         <fieldset>
                             <legend>Inputs HTML5</legend>
                             <p><label for="">Color:</label> <input type="color" name="color" id=""></p>
-                            <p><label for="">Date:</label> <input type="date" name="date" id=""></p>
+                            <p><label  for="" >Date: </label> <input type="date" name="date" id="" ></p>
                             <p><label for="">Datetime:</label> <input type="datetime" name="datetime" id=""></p>
                             <p><label for="">Datetime-local:</label> <input type="datetime-local" name="datetime-local"
                                     id=""></p>
@@ -178,5 +182,6 @@
         }
     </script>
 </body>
+
 
 </html>
