--- a/enlaces.html
+++ b/enlaces.html
@@ -82,7 +82,7 @@
                     <h3>Enlace a una página desde una imagen <br />Realizamos el cambio de página con el atributo <span class="atributo">target</span> con el valor <span class="atributo">_blank</span></h3>
                     
                     <a href="https://www.atleticodemadrid.com/" target=_blank >
-                    <img src="img/atm.jpg"> </a>        
+                    <img src="img/atmsinfondo.png"> </a>        
                     <h3>Enlace a una dirección de correo  </h3>
                     <a href="mailto:jorgenoves1110@gmai.com"> sugerencia al web master  </a>
                     <h3>Alerta de java</h3>
