--- a/formularios.html
+++ b/formularios.html
@@ -10,11 +10,11 @@
 
 
 
-    <body class="formularios-rojos">
+    <body >
     <div class="container shadow">
         <header>
             
-            <div class="row align-items-center">                
+            <div class="row align-items-center ">                
              <div class="col-3"><img src="img/logoespaña.png" alt="logo" width="100"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
@@ -63,6 +63,8 @@
 
 
         </header>
+        <div class="pagina-negra">
+        <div class="formularios-rojos">
         <main class="shadow">
             <div class="px-3">
                 <h1 class="text-center bg-azul-o text-white py-3">HTML5 & CSS3</h1>
@@ -98,7 +100,7 @@
                             </p>
                             <p>
                                 <label for="">Introduce tu contraseña:</label>
-                                <input type="password" name="pass" id="">
+                                <input type="password" name="pass" id="" class=" text-">
                             </p>
                              <p>
                                 <label for="">Comentarios:</label><br />
@@ -174,6 +176,8 @@
             <h1 class="bg-azul-o text-center text-white py-3">&copy; Jorge Muñoz</h1>
       </div>
             </div>
+        </div>
+    </div>
 
     <script>
         function opendrawer() {
